# RustyCore

./: .gitignore  Cargo.toml  README.md
examples/: central_manager.rs  combined.rs
src/: lib.rs
src/api/: central.rs  central_event.rs  characteristic.rs  descriptor.rs  mod.rs  peripheral.rs  peripheral_event.rs  service.rs
src/corebluetooth/: central_manager.rs  mod.rs  peripheral_manager.rs
src/corebluetooth/objc_bindings/: central_delegate_cb.rs  central_manager_cb.rs  central_manager_delegate_cb.rs  mac_extensions_cb.rs  mod.rs  peripheral_cb.rs  peripheral_delegate_cb.rs  peripheral_manager_cb.rs  peripheral_manager_delegate_cb.rs
