[package]
name = "rustycore"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.29"
objc2 = "0.6.3"
objc2-core-bluetooth = "0.3.2"
objc2-foundation = "0.3.2"
pretty_env_logger = "0.5.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = "1.19.0"
